<resources>
    <string name="app_name">内涵段子</string>
    <string name="home">首页</string>
    <string name="discovery">发现</string>
    <string name="check">审核</string>
    <string name="message">消息</string>
    <string name="online">直播</string>
    <string name="video">视频</string>
    <string name="joke">段子</string>
    <string name="recomment">推荐</string>
    <string name="image">图片</string>
    <string name="show">段友秀</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
