<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_home"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/vp_style"
            android:text="@string/online"
            android:checked="true"
            android:id="@+id/online"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/vp_style"
            android:text="@string/recomment"
            android:id="@+id/recomment"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/vp_style"
            android:text="@string/video"
            android:id="@+id/video"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/vp_style"
            android:text="@string/show"
            android:id="@+id/show"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/vp_style"
            android:text="@string/image"
            android:id="@+id/image"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/vp_style"
            android:text="@string/joke"
            android:id="@+id/joke"/>

    </RadioGroup>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>

</LinearLayout>
