<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <!--fragment-->

        </FrameLayout>

        <RadioGroup
            android:id="@+id/rg_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/home_selector"
                android:gravity="center_horizontal"
                android:text="@string/home"
                android:textColor="@color/radiobutton_selector" />

            <RadioButton
                android:id="@+id/discovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/discovery_selector"
                android:gravity="center_horizontal"
                android:text="@string/discovery"
                android:textColor="@color/radiobutton_selector" />

            <RadioButton
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/check_selector"
                android:gravity="center_horizontal"
                android:text="@string/check"
                android:textColor="@color/radiobutton_selector" />

            <RadioButton

                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/message_selector"
                android:gravity="center_horizontal"
                android:text="@string/message"
                android:textColor="@color/radiobutton_selector" />
        </RadioGroup>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
